--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <style type="text/css">
+            body
+            {
+                background-color: rgba(0,0,0,0.9);
+                font-family: "Lucida Console", Monaco, monospace;
+                margin-bottom: 50px;
+            }
+
+            #name
+            {
+                padding-top: 50px;
+                padding-bottom: 50px;
+                position: relative;
+                font-size: 8em;
+                color: black;
+                text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
+                text-align: center;
+                top: 100px;
+            }
+        </style>
 		<title>MovieSA</title>
 	</head>
     <body>
