--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 top: 100px;
             }
         </style>
-		<title>MovieSA</title>
+		<title>Stefan du Toit CV</title>
 	</head>
     <body>
-        <div id="name"><h1>MovieSA</h1></div>
+        <div id="name">My name is Stefan du Toit</div>
     </body>
 </html>
