--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
                 margin-bottom: 50px;
             }
 
-            #name
+            .name
             {
                 padding-bottom: 50px;
                 position: relative;
-                font-size: 3em;
                 color: black;
                 text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
                 text-align: center;
@@ -22,6 +21,6 @@
 		<title>Stefan du Toit CV</title>
 	</head>
     <body>
-        <div id="name">My name is Stefan du Toit</div>
+        <div class="name">My name is Stefan du Toit</div>
     </body>
 </html>
