--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 padding-bottom: 50px;
                 position: relative;
                 color: black;
+                font-size: 2em;
                 text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
                 text-align: center;
             }
