--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
                 position: relative;
                 color: black;
                 font-size: 2em;
-                text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
-                text-align: center;
+                text-align: left;
             }
         </style>
 		<title>Stefan du Toit CV</title>
 	</head>
     <body>
-        <div class="name">My name is Stefan du Toit</div>
+        <div id="info">
+            <div class="name">Curriculum Vitae</div>
+        </div>
     </body>
 </html>
