--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 position: relative;
                 color: black;
                 font-size: 2em;
-                text-align: left;
+                text-align: center;
             }
         </style>
 		<title>Stefan du Toit CV</title>
